// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb in RTL renders Collapsed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <nav
          aria-label="Breadcrumb"
        >
          <ol
            class="flex flex-wrap gap-2 items-center text-moon-14"
          >
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Home
                </a>
              </span>
              <svg
                class="rtl:rotate-180"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </li>
            <li
              class="relative"
            >
              <button
                class="px-1 h-8 py-1 gap-1 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma"
                type="button"
              >
                <svg
                  class="text-moon-16"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
                    stroke="currentColor"
                    stroke-linecap="round"
                  />
                </svg>
                <span
                  aria-hidden="true"
                  class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
                />
              </button>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="rtl:rotate-180"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Page 4
                </a>
              </span>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="rtl:rotate-180"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
              >
                <span>
                  Current page
                </span>
              </span>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Home
              </a>
            </span>
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </li>
          <li
            class="relative"
          >
            <button
              class="px-1 h-8 py-1 gap-1 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma"
              type="button"
            >
              <svg
                class="text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
              <span
                aria-hidden="true"
                class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 4
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb in RTL renders FourItems 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <nav
          aria-label="Breadcrumb"
        >
          <ol
            class="flex flex-wrap gap-2 items-center text-moon-14"
          >
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Home
                </a>
              </span>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="rtl:rotate-180 text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Page 1
                </a>
              </span>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="rtl:rotate-180 text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Page 2
                </a>
              </span>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="rtl:rotate-180 text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
              >
                <span>
                  Current page
                </span>
              </span>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Home
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 1
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 2
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb in RTL renders OneItem 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <nav
          aria-label="Breadcrumb"
        >
          <ol
            class="flex flex-wrap gap-2 items-center text-moon-14"
          >
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <span
                class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
              >
                <span>
                  Current page
                </span>
              </span>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb in RTL renders TwoItems 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <nav
          aria-label="Breadcrumb"
        >
          <ol
            class="flex flex-wrap gap-2 items-center text-moon-14"
          >
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <span
                class="text-trunks transition-colors duration-200 hover:text-bulma"
              >
                <a
                  href=""
                >
                  Home
                </a>
              </span>
            </li>
            <li
              class="flex items-center gap-2 text-trunks"
            >
              <svg
                class="rtl:rotate-180 text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
              >
                <span>
                  Current page
                </span>
              </span>
            </li>
          </ol>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Home
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb renders Collapsed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Home
              </a>
            </span>
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </li>
          <li
            class="relative"
          >
            <button
              class="px-1 h-8 py-1 gap-1 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma"
              type="button"
            >
              <svg
                class="text-moon-16"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
              <span
                aria-hidden="true"
                class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 4
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
    >
      <ol
        class="flex flex-wrap gap-2 items-center text-moon-14"
      >
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Home
            </a>
          </span>
          <svg
            class="rtl:rotate-180"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </li>
        <li
          class="relative"
        >
          <button
            class="px-1 h-8 py-1 gap-1 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-trunks bg-transparent hover:text-bulma"
            type="button"
          >
            <svg
              class="text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24.222 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM8.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385zM16.163 18.414a2.192 2.192 0 110-4.385 2.192 2.192 0 010 4.385z"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
            <span
              aria-hidden="true"
              class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="rtl:rotate-180"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Page 4
            </a>
          </span>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="rtl:rotate-180"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
          >
            <span>
              Current page
            </span>
          </span>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb renders FourItems 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Home
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 1
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Page 2
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
    >
      <ol
        class="flex flex-wrap gap-2 items-center text-moon-14"
      >
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Home
            </a>
          </span>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="rtl:rotate-180 text-moon-16"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Page 1
            </a>
          </span>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="rtl:rotate-180 text-moon-16"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Page 2
            </a>
          </span>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="rtl:rotate-180 text-moon-16"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
          >
            <span>
              Current page
            </span>
          </span>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb renders OneItem 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
    >
      <ol
        class="flex flex-wrap gap-2 items-center text-moon-14"
      >
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <span
            class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
          >
            <span>
              Current page
            </span>
          </span>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Breadcrumb renders TwoItems 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex flex-wrap gap-2 items-center text-moon-14"
        >
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <span
              class="text-trunks transition-colors duration-200 hover:text-bulma"
            >
              <a
                href=""
              >
                Home
              </a>
            </span>
          </li>
          <li
            class="flex items-center gap-2 text-trunks"
          >
            <svg
              class="rtl:rotate-180 text-moon-16"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
            >
              <span>
                Current page
              </span>
            </span>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
    >
      <ol
        class="flex flex-wrap gap-2 items-center text-moon-14"
      >
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <span
            class="text-trunks transition-colors duration-200 hover:text-bulma"
          >
            <a
              href=""
            >
              Home
            </a>
          </span>
        </li>
        <li
          class="flex items-center gap-2 text-trunks"
        >
          <svg
            class="rtl:rotate-180 text-moon-16"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 16.004L25.996 16m0 0l-5.383-5.386M25.996 16l-5.383 5.385"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="transition-colors duration-200 hover:text-bulma text-bulma font-medium"
          >
            <span>
              Current page
            </span>
          </span>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
